feat: 更新redux type

--- a/r-5/.eslintrc
+++ b/r-5/.eslintrc
@@ -51,7 +51,8 @@
     "semi": ["error", "always"],
     "no-param-reassign": "off",
     "arrow-parens": ["error", "always"],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": [1, { "allow": ["warn", "error"] }],
+    "quotes": [2, "single"],
     "jsx-quotes": ["error", "prefer-double"],
     "unicorn/prevent-abbreviations": "off",
     "react/no-danger": "off",
