--- a/r-5/package.json
+++ b/r-5/package.json
@@ -45,15 +45,15 @@
     "dotenv-expand": "5.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
-    "eslint-loader": "3.0.3",
     "eslint-config-ali": "^9.0.2",
     "eslint-config-prettier": "^6.10.1",
     "eslint-formatter-pretty": "^3.0.1",
+    "eslint-loader": "3.0.3",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "7.19.0",
@@ -68,6 +68,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -115,7 +116,7 @@
       "react-app-polyfill/jsdom"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
+      "<rootDir>/src/setup-tests.ts"
     ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
